--- a/client/styles/utils/sticky-footer.scss
+++ b/client/styles/utils/sticky-footer.scss
@@ -6,7 +6,7 @@ $footerHeight: 116px;
   min-height: 100%;
 }
 
-.snap-content{
+snap-content.snap-content{
   min-height: 100%;
   padding-bottom: 0;
 }
